--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,9 +2,11 @@ homepage: "https://www.markus-baersch.de"
 documentation: "https://github.com/mbaersch/url-cleaner#readme"
 versions:
   # Latest version
+  - sha: a833478dd562793af3d78e548213f953f60ad830
+    changeNotes: enabled use of comma-separated lists of parameter names in a single list item for black- and whitelists
+  # Older versions
   - sha: 8bb2c2d82111ac17923e906234f01d59908ee17b
     changeNotes: added special matching option for parameter names in redaction feature
-  # Older versions
   - sha: 264241c533a3a37bde0654e9e2878faf72bbc4ef
     changeNotes: UI fix (no functional changes)
   - sha: 6a9b159b53d598d37a671057f8d9698a3f03ac2f
