--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,7 +2,7 @@ homepage: "https://www.markus-baersch.de"
 documentation: "https://github.com/mbaersch/url-cleaner#readme"
 versions:
   # Latest version
-  - sha: xxxxx
+  - sha: 5262e33ca7651924c0dc6c90f56be69e6cd307de
     changeNotes: added new option "Redact Path" 
   # Older versions
   - sha: a833478dd562793af3d78e548213f953f60ad830
